[project]
name = "marlow"
version = "0.1.0"
description = "Continuous tick-driven agent for ops, research, and blog publishing. Built and maintained by Simona."
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
marlow = "marlow_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["driver", "handlers", "tools", "marlow_cli"]
